@@ -1,4 +1,4 @@
 DIST istack-commons-20070711.tar.bz2 15591 RMD160 b8f91fac3edcda238c5cb48dbffadb3836859b7e SHA1 1d52dbcab83146561cf10e38d1f0769a303f0423 SHA256 c814ea8b03abfa89aa416b87d700c8840a0fa2e4eb5978c50e92ffa080e12ab1
-EBUILD istack-commons-runtime-20070711.ebuild 1104 RMD160 436c43433fddb8d357d1f8db2b23112af8885088 SHA1 ae844be8edc036ce61b5b62c351294e1b812bd38 SHA256 b2897db8a3f6f79b7ae8c41a8a0fb1f0fa8e98fc32a80dd1218d8fcf7b7f685c
-MISC ChangeLog 350 RMD160 0399128eec2c5ec97e4bb2c5bf451f4dd8d6b4f0 SHA1 0fb03c2a8acfa204bc7afebfab4021e4f43e2171 SHA256 6a4f2948a9a65f271d7b31e24acd2d7d447b7895b6cfd6f5a5a2745318f66e2d
+EBUILD istack-commons-runtime-20070711-r1.ebuild 1130 RMD160 49e07b9be55f1f6cc5affa9024e0bb3d9f13b3c5 SHA1 4c2c77d6e86af878eecbcab5d76a3e198dc606dc SHA256 75a98ee74c0b751f6c5872c7faa5d667748df533bad86852218c1ac27edd9924
+MISC ChangeLog 527 RMD160 9934280f0802910be37b02d38f33b5f12c7e1863 SHA1 52c66b48c0558566021e47c722e0988d66879296 SHA256 cb76d883e1bf978e143c41403b4b0489b8407dd6456dd5af51fad70f4a17094a
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
