@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/istack-commons-runtime
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Oct 2008; Serkan Kaba <serkan@gentoo.org>
+  -istack-commons-runtime-20070711.ebuild,
+  +istack-commons-runtime-20070711-r1.ebuild:
+  Migrate to jaf and stax-api virtuals.
 
   01 Sep 2007; Bernhard Frauendienst <gentoo@nospam.obeliks.de>
   +metadata.xml, +istack-commons-runtime-20070711.ebuild:
